Fixed overflowing images in Firefox

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -8,7 +8,6 @@
     flex: 1;
 }
 
-
 .site__content,
 .site__header {
     padding-left: 0.5rem;
@@ -28,6 +27,8 @@
     /* At small screen sizes, all sections are full-width */
     margin: $base-spacing 0;
     flex-basis: 100%;
+    /* fix for overflowing images in Firefox */
+    max-width: fill-available;
 }
 
 @media (min-width: 500px) {
@@ -44,9 +45,16 @@
 }
 
 @media (min-width: 920px) {
-    .primary-content {
-        flex: 1 50%;
+    .one-sidebar .primary-content {
+        max-width: 75%;
+        flex: 0 75%;
     }
+
+    .two-sidebars .primary-content {
+        max-width: 50%;
+        flex: 0 50%;
+    }
+
     .sidebar {
         flex: 0 25%;
 
